--- a/_data/data.yml
+++ b/_data/data.yml
@@ -9,7 +9,7 @@ sidebar:
     # Profile information
     name: Olivier Abad
     tagline: Ingénieur DevSecOps
-    avatar: devsecops.png  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
+    avatar: oabad.jpg  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
 
     # Sidebar links
     email: abad.olivier@gmail.com
