--- a/_data/data.yml
+++ b/_data/data.yml
@@ -8,14 +8,14 @@ sidebar:
 
     # Profile information
     name: Olivier Abad
-    tagline: Ingénieur DevSecOps
+    tagline: 54 ans<br>Ingénieur DevSecOps
     avatar: oabad.jpg  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
 
     # Sidebar links
     email: abad.olivier@gmail.com
     phone: 0608922771
     timezone: CET (Paris, France)
-    citizenship: 54 ans
+      #citizenship:
       #website: blog.webjeda.com #do not add http://
       #linkedin: alandoe
       #xing: alandoe
