Ajout du mois de début sur SWITCH

--- a/_data/data.yml
+++ b/_data/data.yml
@@ -71,7 +71,7 @@ experiences:
     title: Experiences
     info:
       - role: Ingénieur DevSecOps
-        time: 2019 - Present
+        time: 01/2019 - Present
         company: EDF, Montrouge - Projet SWITCH
         details: |
           Membre de la system team du programme Switch, avec un rôle d'ingénieur DevSecOps.
